--- a/source-css/appledashquisition.css
+++ b/source-css/appledashquisition.css
@@ -501,3 +501,5 @@ font-size:10px!important;
 visibility:visible!important;
 }
 a.author[href$="BigMacIsNotABurger"]:before {content:"Maccy's Dead Account"}
+
+a.author[href$="a community for 7 months"]:before {content:"a community for Apple Dashes"}
