--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -138,6 +138,16 @@ Height: 200px;
 background-image: url(%%hornymare%%) !important
 }
 
+a[href="/coloneye"],a[href="/sweetiemote"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 162px;
+Height: 200px;
+background-image: url(%%coloneye%%) !important
+}
+
 
 a[href|="/sp"]
 {
