--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -161,9 +161,9 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  padding-bottom: 220px;
  clear:both;
  text-align:center;
- height:750px;
+ height:400px;
  width:100%;
- background-image:url(%%wordsmith-pony%%);
+ background-image:url(%%compostare%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: bottom center;
@@ -1298,7 +1298,7 @@ a[href|="/tavicheer"] {
 .flair-cmcal {background-position: -300% -100%}
 .flair-cmcal:hover {background-position: -200% -300%} /*For french_guy_al; Tavi Hover*/
 .flair-cmcdc {background-position: -300% -100%}
-.flair-cmcdc:hover {background-position: -300% -2100%} /*For DoomedCivilian; Thunderlane Hover*/ 
+.flair-cmcdc:hover {background-position: -100% -200%} /*For DoomedCivilian; Thunderlane Hover*/ 
 
 /*Doomed Civilians to-add list; Feel free to add to this list!
 Emotes! Main sub has more emotes; They have been moved over, they just need to be messed with. Fear the DC, for he is bored. Lunar edit: Let's try to not change things as often.
@@ -1330,9 +1330,13 @@ a.author[href$="Peacefulzealot"] {font-size:0!important; overflow:hidden; displa
 a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "Zelly Belly"}
 
 a.author[href$="ZephyrC"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="ZephyrC"]:before {font-size:10px!important; visibility:visible!important; content: "ZephyrC is wearing his serious hat"}
+a.author[href$="ZephyrC"]:before {font-size:10px!important; visibility:visible!important; content: "ZephyrC is hatless"}
+
+a.author[href$="MishaDjent"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="MishaDjent"]:before {font-size:10px!important; visibility:visible!important; content: "MishaDjent has no taste in Wikis"}
 
 a.author[href$="Tenth-Gear"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Tenth-Gear"]:before {font-size:10px!important; visibility:visible!important; content: "Tenth-Gear the Court Jester"}
+
 
 .sidecontentbox a.author[href$="Pinkie_Pie"] {font-size:0!important; overflow:hidden; display:none; content: "";}
