--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -27,7 +27,7 @@ div.titlebox .users-online span.number:after {content:" Spiking"}
 
 a.author.id-t2_8gh9f{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
 a.author.id-t2_8gh9f:after{font-size:10px!important;display:block;letter-spacing:normal}
-a.author.id-t2_8gh9f:after {content:" no_one"}
+a.author.id-t2_8gh9f:after {content:" a horse"}
 
 a.author.id-t2_aj4cg{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
 a.author.id-t2_aj4cg:after{font-size:10px!important;display:block;letter-spacing:normal}
@@ -37,6 +37,9 @@ a.author.id-t2_a26t0{content:"";font-size:0px!important;display:inline-block;ver
 a.author.id-t2_a26t0:after{font-size:8px!important;display:block;letter-spacing:normal}
 a.author.id-t2_a26t0:after {content:"I had nothing to do with anything in here"}
 
+a.author .ChickenSteve{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
+a.author.ChickenSteve:after{font-size:10px!important;display:block;letter-spacing:normal}
+a.author.ChickenSteve:after {content:" not_a_chick"}
 
 /*Background (stolen from Plounge) for testing*/ 
 
@@ -143,8 +146,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 162px;
-Height: 200px;
+Width: 122px;
+Height: 150px;
 background-image: url(%%coloneye%%) !important
 }
 
