--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -657,6 +657,13 @@ a[href|="/ppscream"] {
     width:115px; height:139px; background-position: -0px -150px; 
     background-image: url(%%spritesheet2%%) !important
     }
+a[href|="/happypie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:150px; height:169px; background-position: -150px 0px; 
+    background-image: url(%%spritesheet2%%) !important
+    }
 a[href|="/pinkieface"] {
     display: block;
     clear: none;
