--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -637,6 +637,16 @@ hr {
     height: 10px;
     width: 17px;
 }
+
+.flair-warn
+{
+   background-image:none;
+   background-color:#FFE3E3;
+   padding:5px;
+   font-size:12px;
+   border-radius:5px;
+   color:red;
+}
 /* Link flair
 */
 
