--- a/source-css/sgap.css
+++ b/source-css/sgap.css
@@ -19,3 +19,4 @@ a[href="/nullplaytime"]{ background-image: url(%%nullplaytime%%); display: block
 a[href="/nullsquiggly"]{ background-image: url(%%nullsquiggly%%); display: block; clear: none; float: left; width: 114px; height: 166px; } 
 a[href="/nullstargaze"]{ background-image: url(%%nullstargaze%%); display: block; clear: none; float: left; width: 152px; height: 175px; } 
 a[href="/nulltoothless"]{ background-image: url(%%nulltoothless%%); display: block; clear: none; float: left; width: 139px; height: 175px; }
+a[href="/nulltrot"]{ background-image: url(%%nulltrot%%); display: block; clear: none; float: left; width: 106px; height: 96px; }
