--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -161,9 +161,9 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  padding-bottom: 220px;
  clear:both;
  text-align:center;
- height:400px;
+ height:750px;
  width:100%;
- background-image:url(%%compostare%%);
+ background-image:url(%%Cheeristare%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: bottom center;
@@ -1330,13 +1330,11 @@ a.author[href$="Peacefulzealot"] {font-size:0!important; overflow:hidden; displa
 a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "Zelly Belly"}
 
 a.author[href$="ZephyrC"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="ZephyrC"]:before {font-size:10px!important; visibility:visible!important; content: "ZephyrC is hatless"}
-
-a.author[href$="MishaDjent"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="MishaDjent"]:before {font-size:10px!important; visibility:visible!important; content: "MishaDjent has no taste in Wikis"}
+a.author[href$="ZephyrC"]:before {font-size:10px!important; visibility:visible!important; content: "ZephyrC is fedorable"}
 
 a.author[href$="Tenth-Gear"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Tenth-Gear"]:before {font-size:10px!important; visibility:visible!important; content: "Tenth-Gear the Court Jester"}
 
-
+a.author[href$="MishaDjent"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="MishaDjent"]:before {font-size:10px!important; visibility:visible!important; content: "MishaDjent doesn't know when to shut up"}
 .sidecontentbox a.author[href$="Pinkie_Pie"] {font-size:0!important; overflow:hidden; display:none; content: "";}
