--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -82,6 +82,10 @@ background: url(%%votediagram%%) -710px bottom no-repeat;
 }
 
 /* link flairs */
+.linkflairlabel {
+max-width: 20em !important;
+}
+
 .linkflair-closed {
 opacity: 0.4;
 }
@@ -408,7 +412,7 @@ height: 800px;
  */
 
 /* 70x70a 'motes. */
-a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"], a[href|="/ajduckface"], a[href|="/rarapossessed"], a[href|="/maudsmile"], a[href|="/dashsquint"], a[href|="/rastare"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/rdtwipride"], a[href|="/rdtwismile"], a[href|="/rdtwicrazy"], a[href|="/rdtwibeam"], a[href|="/rdtwisquint"], a[href|="/rdtwistare"], a[href|="/rdtwiponder"], a[href|="/scootcontent"], a[href|="/twilightstare"], a[href|="/nursesaywhat"], a[href|="/twiworry"], a[href|="/apathiareally"], a[href|="/karmasmile"], a[href|="/discentiahurry"], a[href|="/karmacute"], a[href|="/discentiashock"], a[href|="/apathiashock"], a[href|="/karmahappy"], a[href|="/discentiaelated"], a[href|="/cadshrug"], a[href|="/fillysurprise"], a[href|="/rdbwaha"]
+a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"], a[href|="/ajduckface"], a[href|="/rarapossessed"], a[href|="/maudsmile"], a[href|="/dashsquint"], a[href|="/rastare"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/rdtwipride"], a[href|="/rdtwismile"], a[href|="/rdtwicrazy"], a[href|="/rdtwibeam"], a[href|="/rdtwisquint"], a[href|="/rdtwistare"], a[href|="/rdtwiponder"], a[href|="/scootcontent"], a[href|="/twilightstare"], a[href|="/nursesaywhat"], a[href|="/twiworry"], a[href|="/apathiareally"], a[href|="/karmasmile"], a[href|="/discentiahurry"], a[href|="/karmacute"], a[href|="/discentiashock"], a[href|="/apathiashock"], a[href|="/karmahappy"], a[href|="/discentiaelated"], a[href|="/cadshrug"], a[href|="/fillysurprise"], a[href|="/rdbwaha"], a[href|="/lemonfire"]
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -432,7 +436,7 @@ a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletaria
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150d 'motes */
-a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"]
+a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"]
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -440,7 +444,7 @@ a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* 200x200b 'motes. */
-a[href|="/rariluna"], a[href|="/superalicorn"]
+a[href|="/rariluna"], a[href|="/superalicorn"], a[href|="/sursilly"]
 {background-image:url(%%200x200b%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
@@ -481,7 +485,7 @@ a[href|="/kawaiidash"], a[href|="/cadmad"], a[href|="/cadbrow"], a[href|="/spitf
 {background-image:url(%%misfitsg%%);display:block;float:left;}
 
 /* Misfits h */
-a[href|="/slowbro"], a[href|="/oddish"], a[href|="/mankey"], a[href|="/applelaugh"], a[href|="/thrackerpoint"], a[href|="/soyouhaveponyaids"], a[href|="/notenoughrarity"], a[href|="/notenoughgems"], a[href|="/notenoughshy"], a[href|="/notenoughflutter"], a[href|="/notenoughflutters"], a[href|="/dashcon"], a[href|="/illumineighti"], a[href|="/twibunny"], a[href|="/cadheart"], a[href|="/piracybloom"], a[href|="/surprisedzecora"], a[href|="/spitheart"], a[href|="/notenoughparties"], a[href|="/notenoughpie"], a[href|="/notenoughpinkie"]
+a[href|="/slowbro"], a[href|="/oddish"], a[href|="/mankey"], a[href|="/applelaugh"], a[href|="/thrackerpoint"], a[href|="/soyouhaveponyaids"], a[href|="/notenoughrarity"], a[href|="/notenoughgems"], a[href|="/notenoughshy"], a[href|="/notenoughflutter"], a[href|="/notenoughflutters"], a[href|="/dashcon"], a[href|="/illumineighti"], a[href|="/twibunny"], a[href|="/cadheart"], a[href|="/piracybloom"], a[href|="/surprisedzecora"], a[href|="/spitheart"], a[href|="/notenoughparties"], a[href|="/notenoughpie"], a[href|="/notenoughpinkie"], a[href|="/thrackerpoint"], a[href|="/thrackerstare"], a[href|="/soyouarereplacingus"], a[href|="/soyourereplacingus"], a[href|="/sweetiescare"], a[href|="/sbstalksthread"], a[href|="/sbstalkthread"]
 {background-image:url(%%misfitsh%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -493,7 +497,7 @@ a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/a
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"], a[href|="/pikachu"]
+a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"], a[href|="/pikachu"], a[href|="/sursilly"]
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
@@ -517,17 +521,16 @@ a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutral
 {background-position: -100% -200%;}
 
 /* Grid pos 2,2 'motes */
-a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"], a[href|="/nerdscratch"], a[href|="/rdtsundere"], a[href|="/twiburger"]
+a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"], a[href|="/nerdscratch"], a[href|="/rdtsundere"], a[href|="/twiburger"], a[href|="/celestiaiswatching"]
 {background-position: -200% -200%;}
 
 /* Grid pos 0,3 'motes */
-a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rdwat"], a[href|="/nerddash"], a[href|="/fsfascinating"], a[href|="/princessdiscord"]
+a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rdwat"], a[href|="/nerddash"], a[href|="/fsfascinating"], a[href|="/princessdiscord"], a[href|="/comehugmebro"], a[href|="/hugmebro"]
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
 a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/cocosmile"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"]
 {background-position: -100% -300%;}
-
 
 /* Grid pos 2,3 'motes */
 a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"], a[href|="/sweetiebitch"], a[href|="/derpydress"]
@@ -652,6 +655,10 @@ a[href|="/fillysurprise"]
 /* Grid pos 2,13 'motes */
 a[href|="/rdbwaha"]
 {background-position: -200% -1300%;}
+
+/* Grid pos 0,14 'motes */
+a[href|="/lemonfire"]
+{background-position: 0 -1400%;}
 
 /* Text Emotes */
 a[href|="/gravestone"] em, a[href|="/theydied"] em
@@ -935,3 +942,6 @@ a[href|="/piracybloom"] {width:122px;height:150px;background-position: -398px -3
 a[href|="/surprisedzecora"] {width:91px;height:150px;background-position: -480px -150px;}
 a[href|="/spitheart"] {width:123px;height:200px;background-position: -577px -200px;}
 a[href|="/notenoughparties"], a[href|="/notenoughpie"], a[href|="/notenoughpinkie"] {width:202px;height:150px;background-position: 0 -442px;}
+a[href|="/thrackerstare"], a[href|="/soyouarereplacingus"], a[href|="/soyourereplacingus"] {width:100px;height:193px;background-position: -250px -400px;}
+a[href|="/sweetiescare"] {width:127px;height:100px;background-position: 0 -592px;}
+a[href|="/sbstalksthread"], a[href|="/sbstalkthread"] {width:94px;height:150px;background-position: -350px -450px;}
